// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderTable/> render() should render 1`] = `
<Table
  className="table"
  hover={true}
  responsiveTag="div"
  tag="table"
>
  <thead>
    <tr>
      <th>
        Product
      </th>
      <th>
        Item price
      </th>
      <th>
        Qty
      </th>
      <th>
        Item total
      </th>
    </tr>
  </thead>
  <tbody>
    <OrderLineItemRow
      currencyCode="USD"
      key="94356bebf609af551809118ec1fbd6c7d8cfab97"
      lineItem={
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      refund={
        Immutable.Map {
          "shipping": Immutable.Map {
            "amount": "0.00",
            "tax": "0.00",
            "maximum_refundable": "0.00",
          },
          "refund_line_items": Immutable.List [
            Immutable.Map {
              "subtotal": "1.00",
              "location_id": 123,
              "price": "1.00",
              "discounted_price": "1.00",
              "quantity": 1,
              "discounted_total_price": "1.00",
              "total_tax": "0.20",
              "total_cart_discount_amount": "0.00",
              "restock_type": "no_restock",
              "line_item_id": 4193100136471,
            },
          ],
          "transactions": Immutable.List [
            Immutable.Map {
              "order_id": 1894175539223,
              "kind": "suggested_refund",
              "gateway": "manual",
              "parent_id": 2521452118039,
              "amount": "1.20",
              "currency": "USD",
              "maximum_refundable": "1.20",
            },
          ],
          "currency": "USD",
        }
      }
      shopCurrencyCode="USD"
      shopName="storegorgias3"
    />
    <OrderLineItemRow
      currencyCode="USD"
      key="bc618f53fda1b87e4292b3b71d5aae3b8730fbb0"
      lineItem={
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      refund={
        Immutable.Map {
          "shipping": Immutable.Map {
            "amount": "0.00",
            "tax": "0.00",
            "maximum_refundable": "0.00",
          },
          "refund_line_items": Immutable.List [
            Immutable.Map {
              "subtotal": "1.00",
              "location_id": 123,
              "price": "1.00",
              "discounted_price": "1.00",
              "quantity": 1,
              "discounted_total_price": "1.00",
              "total_tax": "0.20",
              "total_cart_discount_amount": "0.00",
              "restock_type": "no_restock",
              "line_item_id": 4193100136471,
            },
          ],
          "transactions": Immutable.List [
            Immutable.Map {
              "order_id": 1894175539223,
              "kind": "suggested_refund",
              "gateway": "manual",
              "parent_id": 2521452118039,
              "amount": "1.20",
              "currency": "USD",
              "maximum_refundable": "1.20",
            },
          ],
          "currency": "USD",
        }
      }
      shopCurrencyCode="USD"
      shopName="storegorgias3"
    />
  </tbody>
</Table>
`;

exports[`<OrderTable/> render() should render for multi-currency order 1`] = `
<Table
  className="table"
  hover={true}
  responsiveTag="div"
  tag="table"
>
  <thead>
    <tr>
      <th>
        Product
      </th>
      <th>
        Item price
      </th>
      <th>
        Qty
      </th>
      <th>
        Item total
      </th>
    </tr>
  </thead>
  <tbody>
    <OrderLineItemRow
      currencyCode="USD"
      key="94356bebf609af551809118ec1fbd6c7d8cfab97"
      lineItem={
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 1,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766316567,
          "title": "Acidulous candy",
          "sku": "0987654321-1",
          "variant_title": "Red / A",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      refund={
        Immutable.Map {
          "shipping": Immutable.Map {
            "amount": "0.00",
            "tax": "0.00",
            "maximum_refundable": "0.00",
          },
          "refund_line_items": Immutable.List [
            Immutable.Map {
              "subtotal": "1.00",
              "location_id": 123,
              "price": "1.00",
              "discounted_price": "1.00",
              "quantity": 1,
              "discounted_total_price": "1.00",
              "total_tax": "0.20",
              "total_cart_discount_amount": "0.00",
              "restock_type": "no_restock",
              "line_item_id": 4193100136471,
            },
          ],
          "transactions": Immutable.List [
            Immutable.Map {
              "order_id": 1894175539223,
              "kind": "suggested_refund",
              "gateway": "manual",
              "parent_id": 2521452118039,
              "amount": "1.20",
              "currency": "USD",
              "maximum_refundable": "1.20",
            },
          ],
          "currency": "USD",
        }
      }
      shopCurrencyCode="JPY"
      shopName="storegorgias3"
    />
    <OrderLineItemRow
      currencyCode="USD"
      key="bc618f53fda1b87e4292b3b71d5aae3b8730fbb0"
      lineItem={
        Immutable.Map {
          "applied_discount": null,
          "taxable": true,
          "price": "1.00",
          "quantity": 4,
          "product_id": 8345093387,
          "product_exists": true,
          "properties": Immutable.List [],
          "variant_id": 31128766349335,
          "title": "Acidulous candy",
          "sku": "0987654321-2",
          "variant_title": "Red / B",
          "requires_shipping": true,
        }
      }
      onChange={[Function]}
      refund={
        Immutable.Map {
          "shipping": Immutable.Map {
            "amount": "0.00",
            "tax": "0.00",
            "maximum_refundable": "0.00",
          },
          "refund_line_items": Immutable.List [
            Immutable.Map {
              "subtotal": "1.00",
              "location_id": 123,
              "price": "1.00",
              "discounted_price": "1.00",
              "quantity": 1,
              "discounted_total_price": "1.00",
              "total_tax": "0.20",
              "total_cart_discount_amount": "0.00",
              "restock_type": "no_restock",
              "line_item_id": 4193100136471,
            },
          ],
          "transactions": Immutable.List [
            Immutable.Map {
              "order_id": 1894175539223,
              "kind": "suggested_refund",
              "gateway": "manual",
              "parent_id": 2521452118039,
              "amount": "1.20",
              "currency": "USD",
              "maximum_refundable": "1.20",
            },
          ],
          "currency": "USD",
        }
      }
      shopCurrencyCode="JPY"
      shopName="storegorgias3"
    />
  </tbody>
</Table>
`;
